crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_pivot_with_search.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"service:nginx | pivot avg(duration) on status by host\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet')
  WHERE "service" = 'nginx'
), _s1 AS (
  SELECT "status", "host", "duration"
  FROM "_s0"
)
PIVOT "_s1"
ON "status"
USING AVG("duration")
GROUP BY "host"
