crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_rename_single.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | rename service as svc\")"
---
SELECT * EXCLUDE ("service"), "service" AS "svc"
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
