crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_sort_asc.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | sort host\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet')
ORDER BY "host" ASC
