crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_stats_multiple_aggs.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | stats count(), avg(duration) by host\")"
---
SELECT "host", COUNT(*) AS "count", AVG("duration") AS "avg_duration"
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
GROUP BY "host"
